--- a/docs/docs/docs/client/ui.mdx
+++ b/docs/docs/docs/client/ui.mdx
@@ -15,11 +15,19 @@ You can use it as below.
 ##### Usage
 
 <Tabs groupId="language" defaultValue="ts">
-<TabItem value="ts" label="TypeScript" default> 
+<TabItem value="ts" label="TypeScript" default>
 
 ```ts
 const ui = gamium.ui();
 await ui.click(By.path('Object path'));
+```
+
+</TabItem>
+<TabItem value="py" label="Python" default>
+
+```python
+ui = gamium.ui()
+ui.click(By.path('Object path'))
 ```
 
 </TabItem>
@@ -31,12 +39,21 @@ If you are using the class [`UI`](api/client/typescript/classes/ui), automatical
 The above Usage works the same as below.
 
 <Tabs groupId="language" defaultValue="ts">
-<TabItem value="ts" label="TypeScript" default> 
+<TabItem value="ts" label="TypeScript" default>
 
 ```ts
 const button = await ui.wait(By.path('Object path'));
 await gamium.wait(Until.elementInteractable(button));
 await button.click();
+```
+
+</TabItem>
+<TabItem value="py" label="Python" default>
+
+```python
+button = ui.wait(By.path('Object path'))
+gamium.wait(Until.element_interactable(button))
+button.click();
 ```
 
 </TabItem>
