docs: python client api docs listup

--- a/docs/docs/api/client/python/classes/gamium-client.mdx
+++ b/docs/docs/api/client/python/classes/gamium-client.mdx
@@ -1,3 +1,8 @@
+---
+sidebar_position: 1
+title: GamiumClient
+toc_max_heading_level: 4
+---
 
 # GamiumClient <s generated />
 
@@ -11,7 +16,7 @@
 
 ##### Return <s generated />
 
-- `ActionChain` <s generated />
+- [`ActionChain`]( action-chain) <s generated />
 
 <hr class="solid" />  <s generated />
 
@@ -23,7 +28,7 @@
 
 - locator `RpcLocator` <s generated />
 
-- option [`Optional`]( https://docs.python.org/ko/3.9/library/typing.html?highlight=optional#typing.Optional)[`ExecuteRpcOptions`] <s generated />
+- option [`Optional`]( https://docs.python.org/3.9/library/typing.html?highlight=optional#typing.Optional)[[`ExecuteRpcOptions`]( execute-rpc-options)] <s generated />
 
 ##### Return <s generated />
 
@@ -39,11 +44,11 @@
 
 - locator `Locator` <s generated />
 
-- options [`Optional`]( https://docs.python.org/ko/3.9/library/typing.html?highlight=optional#typing.Optional)[`FindObjectOptions`] <s generated />
+- options [`Optional`]( https://docs.python.org/3.9/library/typing.html?highlight=optional#typing.Optional)[[`FindObjectOptions`]( find-object-options)] <s generated />
 
 ##### Return <s generated />
 
-- `ObjectInfo` <s generated />
+- [`ObjectInfo`]( object-info) <s generated />
 
 <hr class="solid" />  <s generated />
 
@@ -55,11 +60,11 @@
 
 - locator `Locator` <s generated />
 
-- options [`Optional`]( https://docs.python.org/ko/3.9/library/typing.html?highlight=optional#typing.Optional)[`FindObjectOptions`] <s generated />
+- options [`Optional`]( https://docs.python.org/3.9/library/typing.html?highlight=optional#typing.Optional)[[`FindObjectOptions`]( find-object-options)] <s generated />
 
 ##### Return <s generated />
 
-- [`List`]( https://docs.python.org/ko/3.9/library/typing.html?highlight=optional#typing.List)[`ObjectInfo`] <s generated />
+- [`List`]( https://docs.python.org/3.9/library/stdtypes.html?highlight=int#sequence-types-list-tuple-range)[[`ObjectInfo`]( object-info)] <s generated />
 
 <hr class="solid" />  <s generated />
 
@@ -71,11 +76,11 @@
 
 - locator `Locator` <s generated />
 
-- options [`Optional`]( https://docs.python.org/ko/3.9/library/typing.html?highlight=optional#typing.Optional)[`FindObjectOptions`] <s generated />
+- options [`Optional`]( https://docs.python.org/3.9/library/typing.html?highlight=optional#typing.Optional)[[`FindObjectOptions`]( find-object-options)] <s generated />
 
 ##### Return <s generated />
 
-- `Player` <s generated />
+- [`Player`]( player) <s generated />
 
 <hr class="solid" />  <s generated />
 
@@ -105,9 +110,9 @@
 
 ##### Arguments <s generated />
 
-- by `KeyBy` <s generated />
+- by [`KeyBy`]( key-by) <s generated />
 
-- options [`Optional`]( https://docs.python.org/ko/3.9/library/typing.html?highlight=optional#typing.Optional)[`SendKeyOptions`] <s generated />
+- options [`Optional`]( https://docs.python.org/3.9/library/typing.html?highlight=optional#typing.Optional)[[`SendKeyOptions`]( send-key-options)] <s generated />
 
 <hr class="solid" />  <s generated />
 
@@ -117,9 +122,9 @@
 
 ##### Arguments <s generated />
 
-- by_list [`List`]( https://docs.python.org/ko/3.9/library/typing.html?highlight=optional#typing.List)[`KeyBy`] <s generated />
+- by_list [`List`]( https://docs.python.org/3.9/library/stdtypes.html?highlight=int#sequence-types-list-tuple-range)[[`KeyBy`]( key-by)] <s generated />
 
-- options [`Optional`]( https://docs.python.org/ko/3.9/library/typing.html?highlight=optional#typing.Optional)[`SendKeyOptions`] <s generated />
+- options [`Optional`]( https://docs.python.org/3.9/library/typing.html?highlight=optional#typing.Optional)[[`SendKeyOptions`]( send-key-options)] <s generated />
 
 <hr class="solid" />  <s generated />
 
@@ -129,13 +134,13 @@
 
 ##### Arguments <s generated />
 
-- condition `WaitCondition`[[`T`]( https://docs.python.org/ko/3.9/library/typing.html?highlight=optional#typing.TypeVar)] <s generated />
+- condition `WaitCondition`[[`T`]( https://docs.python.org/3.9/library/typing.html?highlight=optional#typing.TypeVar)] <s generated />
 
-- options [`Optional`]( https://docs.python.org/ko/3.9/library/typing.html?highlight=optional#typing.Optional)[`WaitOptions`] <s generated />
+- options [`Optional`]( https://docs.python.org/3.9/library/typing.html?highlight=optional#typing.Optional)[[`WaitOptions`]( wait-options)] <s generated />
 
 ##### Return <s generated />
 
-- `TryResult`[[`T`]( https://docs.python.org/ko/3.9/library/typing.html?highlight=optional#typing.TypeVar)] <s generated />
+- `TryResult`[[`T`]( https://docs.python.org/3.9/library/typing.html?highlight=optional#typing.TypeVar)] <s generated />
 
 <hr class="solid" />  <s generated />
 
@@ -145,7 +150,7 @@
 
 ##### Return <s generated />
 
-- `UI` <s generated />
+- [`UI`]( ui) <s generated />
 
 <hr class="solid" />  <s generated />
 
@@ -155,12 +160,12 @@
 
 ##### Arguments <s generated />
 
-- condition `WaitCondition`[[`T`]( https://docs.python.org/ko/3.9/library/typing.html?highlight=optional#typing.TypeVar)] <s generated />
+- condition `WaitCondition`[[`T`]( https://docs.python.org/3.9/library/typing.html?highlight=optional#typing.TypeVar)] <s generated />
 
-- options [`Optional`]( https://docs.python.org/ko/3.9/library/typing.html?highlight=optional#typing.Optional)[`WaitOptions`] <s generated />
+- options [`Optional`]( https://docs.python.org/3.9/library/typing.html?highlight=optional#typing.Optional)[[`WaitOptions`]( wait-options)] <s generated />
 
 ##### Return <s generated />
 
-- [`T`]( https://docs.python.org/ko/3.9/library/typing.html?highlight=optional#typing.TypeVar) <s generated />
+- [`T`]( https://docs.python.org/3.9/library/typing.html?highlight=optional#typing.TypeVar) <s generated />
 
 <hr class="solid" />  <s generated />
