--- a/docs/docs/api/client/python/classes/gamium-client.mdx
+++ b/docs/docs/api/client/python/classes/gamium-client.mdx
@@ -114,6 +114,10 @@ toc_max_heading_level: 4
 
 - options [`Optional`]( https://docs.python.org/3.9/library/typing.html?highlight=optional#typing.Optional)[[`SendKeyOptions`]( send-key-options)] <s generated />
 
+##### Return <s generated />
+
+- [`None`]( https://docs.python.org/3.9/library/constants.html?highlight=none#None) <s generated />
+
 <hr class="solid" />  <s generated />
 
 ### send_keys <s generated />
@@ -125,6 +129,10 @@ toc_max_heading_level: 4
 - by_list [`List`]( https://docs.python.org/3.9/library/stdtypes.html?highlight=int#sequence-types-list-tuple-range)[[`KeyBy`]( key-by)] <s generated />
 
 - options [`Optional`]( https://docs.python.org/3.9/library/typing.html?highlight=optional#typing.Optional)[[`SendKeyOptions`]( send-key-options)] <s generated />
+
+##### Return <s generated />
+
+- [`None`]( https://docs.python.org/3.9/library/constants.html?highlight=none#None) <s generated />
 
 <hr class="solid" />  <s generated />
 
