--- a/docs/docs/api/client/python/classes/gamium-error.mdx
+++ b/docs/docs/api/client/python/classes/gamium-error.mdx
@@ -8,6 +8,16 @@ toc_max_heading_level: 4
 
 <hr class="solid" />  <s generated />
 
+## Properties <s generated />
+
+#### code [`int`]( https://docs.python.org/3.9/library/stdtypes.html?highlight=int#numeric-types-int-float-complex) <s generated />
+
+<hr class="solid" />  <s generated />
+
+#### message [`str`]( https://docs.python.org/3.9/library/stdtypes.html?highlight=int#numeric-types-int-float-complex) <s generated />
+
+<hr class="solid" />  <s generated />
+
 ## Methods <s generated />
 
 ### default <s generated />
