--- a/docs/docs/api/client/python/classes/object-info.mdx
+++ b/docs/docs/api/client/python/classes/object-info.mdx
@@ -6,3 +6,41 @@ toc_max_heading_level: 4
 # ObjectInfo <s generated />
 
 <hr class="solid" />  <s generated />
+
+## Properties <s generated />
+
+#### path [`str`]( https://docs.python.org/3.9/library/stdtypes.html?highlight=int#numeric-types-int-float-complex) <s generated />
+
+<hr class="solid" />  <s generated />
+
+#### name [`str`]( https://docs.python.org/3.9/library/stdtypes.html?highlight=int#numeric-types-int-float-complex) <s generated />
+
+<hr class="solid" />  <s generated />
+
+#### type [`int`]( https://docs.python.org/3.9/library/stdtypes.html?highlight=int#numeric-types-int-float-complex) <s generated />
+
+<hr class="solid" />  <s generated />
+
+#### tag [`List`]( https://docs.python.org/3.9/library/stdtypes.html?highlight=int#sequence-types-list-tuple-range)[[`str`]( https://docs.python.org/3.9/library/stdtypes.html?highlight=int#numeric-types-int-float-complex)] <s generated />
+
+<hr class="solid" />  <s generated />
+
+#### is_active [`bool`]( https://docs.python.org/3.9/library/stdtypes.html?highlight=int#boolean-values) <s generated />
+
+<hr class="solid" />  <s generated />
+
+#### screen_position [`Vector3`]( vector3) <s generated />
+
+<hr class="solid" />  <s generated />
+
+#### position [`Vector3`]( vector3) <s generated />
+
+<hr class="solid" />  <s generated />
+
+#### rotation [`Vector4`]( vector4) <s generated />
+
+<hr class="solid" />  <s generated />
+
+#### text [`str`]( https://docs.python.org/3.9/library/stdtypes.html?highlight=int#numeric-types-int-float-complex) <s generated />
+
+<hr class="solid" />  <s generated />
