--- a/docs/docs/api/client/python/classes/player.mdx
+++ b/docs/docs/api/client/python/classes/player.mdx
@@ -8,6 +8,12 @@ toc_max_heading_level: 4
 
 <hr class="solid" />  <s generated />
 
+## Properties <s generated />
+
+#### info [`ObjectInfo`]( object-info) <s generated />
+
+<hr class="solid" />  <s generated />
+
 ## Methods <s generated />
 
 ### is_near <s generated />
@@ -33,6 +39,10 @@ toc_max_heading_level: 4
 - dest [`Union`]( https://docs.python.org/3.9/library/typing.html?highlight=optional#typing.Union)[[`Vector3`]( vector3), `Locator`] <s generated />
 
 - options [`Optional`]( https://docs.python.org/3.9/library/typing.html?highlight=optional#typing.Optional)[[`MovePlayerOptions`]( move-player-options)] <s generated />
+
+##### Return <s generated />
+
+- [`None`]( https://docs.python.org/3.9/library/constants.html?highlight=none#None) <s generated />
 
 <hr class="solid" />  <s generated />
 
