--- a/docs/docs/api/client/python/classes/query-profile-result.mdx
+++ b/docs/docs/api/client/python/classes/query-profile-result.mdx
@@ -6,3 +6,9 @@ toc_max_heading_level: 4
 # QueryProfileResult <s generated />
 
 <hr class="solid" />  <s generated />
+
+## Properties <s generated />
+
+#### fps `float` <s generated />
+
+<hr class="solid" />  <s generated />
