--- a/docs/docs/api/client/python/classes/ui-element.mdx
+++ b/docs/docs/api/client/python/classes/ui-element.mdx
@@ -8,6 +8,12 @@ toc_max_heading_level: 4
 
 <hr class="solid" />  <s generated />
 
+## Properties <s generated />
+
+#### info [`ObjectInfo`]( object-info) <s generated />
+
+<hr class="solid" />  <s generated />
+
 ## Methods <s generated />
 
 ### click <s generated />
@@ -18,6 +24,10 @@ toc_max_heading_level: 4
 
 - options [`Optional`]( https://docs.python.org/3.9/library/typing.html?highlight=optional#typing.Optional)[[`ActionClickOptions`]( action-click-options)] <s generated />
 
+##### Return <s generated />
+
+- [`None`]( https://docs.python.org/3.9/library/constants.html?highlight=none#None) <s generated />
+
 <hr class="solid" />  <s generated />
 
 ### drag <s generated />
@@ -26,9 +36,13 @@ toc_max_heading_level: 4
 
 ##### Arguments <s generated />
 
-- to [`Union`]( https://docs.python.org/3.9/library/typing.html?highlight=optional#typing.Union)["[`UIElement`]( ui-element)", [`Vector2`]( vector2)] <s generated />
+- to [`Union`]( https://docs.python.org/3.9/library/typing.html?highlight=optional#typing.Union)[[`UIElement`]( ui-element), [`Vector2`]( vector2)] <s generated />
 
 - options [`Optional`]( https://docs.python.org/3.9/library/typing.html?highlight=optional#typing.Optional)[[`ActionDragOptions`]( action-drag-options)] <s generated />
+
+##### Return <s generated />
+
+- [`None`]( https://docs.python.org/3.9/library/constants.html?highlight=none#None) <s generated />
 
 <hr class="solid" />  <s generated />
 
