--- a/docs/docs/api/client/python/classes/action-drag-options.mdx
+++ b/docs/docs/api/client/python/classes/action-drag-options.mdx
@@ -6,3 +6,13 @@ toc_max_heading_level: 4
 # ActionDragOptions <s generated />
 
 <hr class="solid" />  <s generated />
+
+## Properties <s generated />
+
+#### duration_ms [`Optional`]( https://docs.python.org/3.9/library/typing.html?highlight=optional#typing.Optional)[[`int`]( https://docs.python.org/3.9/library/stdtypes.html?highlight=int#numeric-types-int-float-complex)] <s generated />
+
+<hr class="solid" />  <s generated />
+
+#### interval_ms [`Optional`]( https://docs.python.org/3.9/library/typing.html?highlight=optional#typing.Optional)[[`int`]( https://docs.python.org/3.9/library/stdtypes.html?highlight=int#numeric-types-int-float-complex)] <s generated />
+
+<hr class="solid" />  <s generated />
