--- a/docs/docs/api/client/python/classes/by.mdx
+++ b/docs/docs/api/client/python/classes/by.mdx
@@ -8,6 +8,16 @@ toc_max_heading_level: 4
 
 <hr class="solid" />  <s generated />
 
+## Properties <s generated />
+
+#### by [`ObjectLocatorBy`]( object-locator-by) <s generated />
+
+<hr class="solid" />  <s generated />
+
+#### str [`str`]( https://docs.python.org/3.9/library/stdtypes.html?highlight=int#numeric-types-int-float-complex) <s generated />
+
+<hr class="solid" />  <s generated />
+
 ## Methods <s generated />
 
 ### path <s generated />
