--- a/docs/docs/api/client/python/classes/error-result.mdx
+++ b/docs/docs/api/client/python/classes/error-result.mdx
@@ -6,3 +6,13 @@ toc_max_heading_level: 4
 # ErrorResult <s generated />
 
 <hr class="solid" />  <s generated />
+
+## Properties <s generated />
+
+#### code [`int`]( https://docs.python.org/3.9/library/stdtypes.html?highlight=int#numeric-types-int-float-complex) <s generated />
+
+<hr class="solid" />  <s generated />
+
+#### reason [`str`]( https://docs.python.org/3.9/library/stdtypes.html?highlight=int#numeric-types-int-float-complex) <s generated />
+
+<hr class="solid" />  <s generated />
