--- a/docs/docs/api/client/python/classes/execute-rpc-options.mdx
+++ b/docs/docs/api/client/python/classes/execute-rpc-options.mdx
@@ -6,3 +6,9 @@ toc_max_heading_level: 4
 # ExecuteRpcOptions <s generated />
 
 <hr class="solid" />  <s generated />
+
+## Properties <s generated />
+
+#### cast_number_to_float [`Optional`]( https://docs.python.org/3.9/library/typing.html?highlight=optional#typing.Optional)[[`bool`]( https://docs.python.org/3.9/library/stdtypes.html?highlight=int#boolean-values)] <s generated />
+
+<hr class="solid" />  <s generated />
