--- a/docs/docs/api/client/python/classes/key-by.mdx
+++ b/docs/docs/api/client/python/classes/key-by.mdx
@@ -8,6 +8,16 @@ toc_max_heading_level: 4
 
 <hr class="solid" />  <s generated />
 
+## Properties <s generated />
+
+#### by [`int`]( https://docs.python.org/3.9/library/stdtypes.html?highlight=int#numeric-types-int-float-complex) <s generated />
+
+<hr class="solid" />  <s generated />
+
+#### str [`str`]( https://docs.python.org/3.9/library/stdtypes.html?highlight=int#numeric-types-int-float-complex) <s generated />
+
+<hr class="solid" />  <s generated />
+
 ## Methods <s generated />
 
 ### unity_keyboard <s generated />
@@ -16,7 +26,7 @@ toc_max_heading_level: 4
 
 ##### Arguments <s generated />
 
-- keyboard_code [`int`]( https://docs.python.org/3.9/library/stdtypes.html?highlight=int#numeric-types-int-float-complex) <s generated />
+- keyboard_code [`str`]( https://docs.python.org/3.9/library/stdtypes.html?highlight=int#numeric-types-int-float-complex) <s generated />
 
 <hr class="solid" />  <s generated />
 
