--- a/docs/docs/api/client/python/classes/query-object-interactable-options.mdx
+++ b/docs/docs/api/client/python/classes/query-object-interactable-options.mdx
@@ -6,3 +6,13 @@ toc_max_heading_level: 4
 # QueryObjectInteractableOptions <s generated />
 
 <hr class="solid" />  <s generated />
+
+## Properties <s generated />
+
+#### check_moving [`Optional`]( https://docs.python.org/3.9/library/typing.html?highlight=optional#typing.Optional)[[`bool`]( https://docs.python.org/3.9/library/stdtypes.html?highlight=int#boolean-values)] <s generated />
+
+<hr class="solid" />  <s generated />
+
+#### check_raycast [`Optional`]( https://docs.python.org/3.9/library/typing.html?highlight=optional#typing.Optional)[[`bool`]( https://docs.python.org/3.9/library/stdtypes.html?highlight=int#boolean-values)] <s generated />
+
+<hr class="solid" />  <s generated />
