--- a/docs/docs/api/client/python/classes/query-screen-result.mdx
+++ b/docs/docs/api/client/python/classes/query-screen-result.mdx
@@ -6,3 +6,13 @@ toc_max_heading_level: 4
 # QueryScreenResult <s generated />
 
 <hr class="solid" />  <s generated />
+
+## Properties <s generated />
+
+#### width [`int`]( https://docs.python.org/3.9/library/stdtypes.html?highlight=int#numeric-types-int-float-complex) <s generated />
+
+<hr class="solid" />  <s generated />
+
+#### height [`int`]( https://docs.python.org/3.9/library/stdtypes.html?highlight=int#numeric-types-int-float-complex) <s generated />
+
+<hr class="solid" />  <s generated />
