--- a/docs/docs/api/client/python/classes/vector3.mdx
+++ b/docs/docs/api/client/python/classes/vector3.mdx
@@ -7,10 +7,28 @@ toc_max_heading_level: 4
 
 <hr class="solid" />  <s generated />
 
+## Properties <s generated />
+
+#### x `float` <s generated />
+
+<hr class="solid" />  <s generated />
+
+#### y `float` <s generated />
+
+<hr class="solid" />  <s generated />
+
+#### z `float` <s generated />
+
+<hr class="solid" />  <s generated />
+
 ## Methods <s generated />
 
 ### zero <s generated />
 
 <s childtag /> <code style={{ position:'relative', top:'-20px', fontSize:'70%'}} children='public'/> <code style={{ position:'relative', top:'-20px', fontSize:'70%'}} children='static'/> <s generated />
+
+##### Return <s generated />
+
+- [`Vector3`]( vector3) <s generated />
 
 <hr class="solid" />  <s generated />
