--- a/docs/docs/api/client/python/classes/wait-options.mdx
+++ b/docs/docs/api/client/python/classes/wait-options.mdx
@@ -6,3 +6,21 @@ toc_max_heading_level: 4
 # WaitOptions <s generated />
 
 <hr class="solid" />  <s generated />
+
+## Properties <s generated />
+
+#### timeout_ms [`Optional`]( https://docs.python.org/3.9/library/typing.html?highlight=optional#typing.Optional)[[`int`]( https://docs.python.org/3.9/library/stdtypes.html?highlight=int#numeric-types-int-float-complex)] <s generated />
+
+<hr class="solid" />  <s generated />
+
+#### message [`Optional`]( https://docs.python.org/3.9/library/typing.html?highlight=optional#typing.Optional)[[`str`]( https://docs.python.org/3.9/library/stdtypes.html?highlight=int#numeric-types-int-float-complex)] <s generated />
+
+<hr class="solid" />  <s generated />
+
+#### interval_ms [`Optional`]( https://docs.python.org/3.9/library/typing.html?highlight=optional#typing.Optional)[[`int`]( https://docs.python.org/3.9/library/stdtypes.html?highlight=int#numeric-types-int-float-complex)] <s generated />
+
+<hr class="solid" />  <s generated />
+
+#### ignore_error [`Optional`]( https://docs.python.org/3.9/library/typing.html?highlight=optional#typing.Optional)[[`bool`]( https://docs.python.org/3.9/library/stdtypes.html?highlight=int#boolean-values)] <s generated />
+
+<hr class="solid" />  <s generated />
