docs: python property docs, fixing mypy type check errors

--- a/docs/docs/api/client/python/classes/action-chain.mdx
+++ b/docs/docs/api/client/python/classes/action-chain.mdx
@@ -16,9 +16,9 @@ toc_max_heading_level: 4
 
 ##### Arguments <s generated />
 
-- exit_code [`Optional`]( https://docs.python.org/3.9/library/typing.html?highlight=optional#typing.Optional)[[`int`]( https://docs.python.org/3.9/library/stdtypes.html?highlight=int#numeric-types-int-float-complex)] <s generated />
+- exit_code [`int`]( https://docs.python.org/3.9/library/stdtypes.html?highlight=int#numeric-types-int-float-complex) <s generated />
 
-- delay_ms [`Optional`]( https://docs.python.org/3.9/library/typing.html?highlight=optional#typing.Optional)[[`int`]( https://docs.python.org/3.9/library/stdtypes.html?highlight=int#numeric-types-int-float-complex)] <s generated />
+- delay_ms [`int`]( https://docs.python.org/3.9/library/stdtypes.html?highlight=int#numeric-types-int-float-complex) <s generated />
 
 <hr class="solid" />  <s generated />
 
@@ -30,7 +30,7 @@ toc_max_heading_level: 4
 
 - position [`Vector2`]( vector2) <s generated />
 
-- options [`Optional`]( https://docs.python.org/3.9/library/typing.html?highlight=optional#typing.Optional)[[`ActionClickOptions`]( action-click-options)] <s generated />
+- options [`ActionClickOptions`]( action-click-options) <s generated />
 
 <hr class="solid" />  <s generated />
 
@@ -44,7 +44,7 @@ toc_max_heading_level: 4
 
 - to_position [`Vector2`]( vector2) <s generated />
 
-- options [`Optional`]( https://docs.python.org/3.9/library/typing.html?highlight=optional#typing.Optional)[[`ActionDragOptions`]( action-drag-options)] <s generated />
+- options [`ActionDragOptions`]( action-drag-options) <s generated />
 
 <hr class="solid" />  <s generated />
 
@@ -56,7 +56,7 @@ toc_max_heading_level: 4
 
 - position [`Vector2`]( vector2) <s generated />
 
-- options [`Optional`]( https://docs.python.org/3.9/library/typing.html?highlight=optional#typing.Optional)[[`ActionMoveOptions`]( action-move-options)] <s generated />
+- options [`ActionMoveOptions`]( action-move-options) <s generated />
 
 <hr class="solid" />  <s generated />
 
@@ -72,7 +72,7 @@ toc_max_heading_level: 4
 
 - dest [`Vector3`]( vector3) <s generated />
 
-- options [`Optional`]( https://docs.python.org/3.9/library/typing.html?highlight=optional#typing.Optional)[[`MovePlayerOptions`]( move-player-options)] <s generated />
+- options [`MovePlayerOptions`]( move-player-options) <s generated />
 
 <hr class="solid" />  <s generated />
 
@@ -96,7 +96,7 @@ toc_max_heading_level: 4
 
 - delta [`Vector2`]( vector2) <s generated />
 
-- options [`Optional`]( https://docs.python.org/3.9/library/typing.html?highlight=optional#typing.Optional)[[`ActionScrollOptions`]( action-scroll-options)] <s generated />
+- options [`ActionScrollOptions`]( action-scroll-options) <s generated />
 
 <hr class="solid" />  <s generated />
 
@@ -108,7 +108,7 @@ toc_max_heading_level: 4
 
 - by_list [`List`]( https://docs.python.org/3.9/library/stdtypes.html?highlight=int#sequence-types-list-tuple-range)[[`KeyBy`]( key-by)] <s generated />
 
-- options [`Optional`]( https://docs.python.org/3.9/library/typing.html?highlight=optional#typing.Optional)[[`SendKeyOptions`]( send-key-options)] <s generated />
+- options [`SendKeyOptions`]( send-key-options) <s generated />
 
 <hr class="solid" />  <s generated />
 
@@ -122,7 +122,7 @@ toc_max_heading_level: 4
 
 - text [`str`]( https://docs.python.org/3.9/library/stdtypes.html?highlight=int#numeric-types-int-float-complex) <s generated />
 
-- options [`Optional`]( https://docs.python.org/3.9/library/typing.html?highlight=optional#typing.Optional)[[`SetTextOptions`]( set-text-options)] <s generated />
+- options [`SetTextOptions`]( set-text-options) <s generated />
 
 <hr class="solid" />  <s generated />
 
