--- a/docs/docs/api/client/python/classes/by.mdx
+++ b/docs/docs/api/client/python/classes/by.mdx
@@ -10,7 +10,7 @@ toc_max_heading_level: 4
 
 ## Properties <s generated />
 
-#### by [`ObjectLocatorBy`]( object-locator-by) <s generated />
+#### by [`int`]( https://docs.python.org/3.9/library/stdtypes.html?highlight=int#numeric-types-int-float-complex) <s generated />
 
 <hr class="solid" />  <s generated />
 
