--- a/docs/docs/api/client/python/classes/gamium-client.mdx
+++ b/docs/docs/api/client/python/classes/gamium-client.mdx
@@ -28,11 +28,11 @@ toc_max_heading_level: 4
 
 - locator `RpcLocator` <s generated />
 
-- option [`Optional`]( https://docs.python.org/3.9/library/typing.html?highlight=optional#typing.Optional)[[`ExecuteRpcOptions`]( execute-rpc-options)] <s generated />
+- option [`ExecuteRpcOptions`]( execute-rpc-options) <s generated />
 
 ##### Return <s generated />
 
-- `any` <s generated />
+- [`Any`]( https://docs.python.org/3.9/library/typing.html?highlight=any#typing.Any) <s generated />
 
 <hr class="solid" />  <s generated />
 
@@ -44,7 +44,7 @@ toc_max_heading_level: 4
 
 - locator `Locator` <s generated />
 
-- options [`Optional`]( https://docs.python.org/3.9/library/typing.html?highlight=optional#typing.Optional)[[`FindObjectOptions`]( find-object-options)] <s generated />
+- options [`FindObjectOptions`]( find-object-options) <s generated />
 
 ##### Return <s generated />
 
@@ -60,7 +60,7 @@ toc_max_heading_level: 4
 
 - locator `Locator` <s generated />
 
-- options [`Optional`]( https://docs.python.org/3.9/library/typing.html?highlight=optional#typing.Optional)[[`FindObjectOptions`]( find-object-options)] <s generated />
+- options [`FindObjectOptions`]( find-object-options) <s generated />
 
 ##### Return <s generated />
 
@@ -76,7 +76,7 @@ toc_max_heading_level: 4
 
 - locator `Locator` <s generated />
 
-- options [`Optional`]( https://docs.python.org/3.9/library/typing.html?highlight=optional#typing.Optional)[[`FindObjectOptions`]( find-object-options)] <s generated />
+- options [`FindObjectOptions`]( find-object-options) <s generated />
 
 ##### Return <s generated />
 
@@ -112,7 +112,7 @@ toc_max_heading_level: 4
 
 - by [`KeyBy`]( key-by) <s generated />
 
-- options [`Optional`]( https://docs.python.org/3.9/library/typing.html?highlight=optional#typing.Optional)[[`SendKeyOptions`]( send-key-options)] <s generated />
+- options [`SendKeyOptions`]( send-key-options) <s generated />
 
 ##### Return <s generated />
 
@@ -128,7 +128,7 @@ toc_max_heading_level: 4
 
 - by_list [`List`]( https://docs.python.org/3.9/library/stdtypes.html?highlight=int#sequence-types-list-tuple-range)[[`KeyBy`]( key-by)] <s generated />
 
-- options [`Optional`]( https://docs.python.org/3.9/library/typing.html?highlight=optional#typing.Optional)[[`SendKeyOptions`]( send-key-options)] <s generated />
+- options [`SendKeyOptions`]( send-key-options) <s generated />
 
 ##### Return <s generated />
 
@@ -144,7 +144,7 @@ toc_max_heading_level: 4
 
 - condition `WaitCondition`[[`T`]( https://docs.python.org/3.9/library/typing.html?highlight=optional#typing.TypeVar)] <s generated />
 
-- options [`Optional`]( https://docs.python.org/3.9/library/typing.html?highlight=optional#typing.Optional)[[`WaitOptions`]( wait-options)] <s generated />
+- options [`WaitOptions`]( wait-options) <s generated />
 
 ##### Return <s generated />
 
@@ -170,7 +170,7 @@ toc_max_heading_level: 4
 
 - condition `WaitCondition`[[`T`]( https://docs.python.org/3.9/library/typing.html?highlight=optional#typing.TypeVar)] <s generated />
 
-- options [`Optional`]( https://docs.python.org/3.9/library/typing.html?highlight=optional#typing.Optional)[[`WaitOptions`]( wait-options)] <s generated />
+- options [`WaitOptions`]( wait-options) <s generated />
 
 ##### Return <s generated />
 
