--- a/docs/docs/api/client/python/classes/move-player-options.mdx
+++ b/docs/docs/api/client/python/classes/move-player-options.mdx
@@ -9,14 +9,14 @@ toc_max_heading_level: 4
 
 ## Properties <s generated />
 
-#### by [`Optional`]( https://docs.python.org/3.9/library/typing.html?highlight=optional#typing.Optional)[[`int`]( https://docs.python.org/3.9/library/stdtypes.html?highlight=int#numeric-types-int-float-complex)] <s generated />
+#### by [`int`]( https://docs.python.org/3.9/library/stdtypes.html?highlight=int#numeric-types-int-float-complex) <s generated />
 
 <hr class="solid" />  <s generated />
 
-#### epsilon [`Optional`]( https://docs.python.org/3.9/library/typing.html?highlight=optional#typing.Optional)[`float`] <s generated />
+#### epsilon `float` <s generated />
 
 <hr class="solid" />  <s generated />
 
-#### check_height [`Optional`]( https://docs.python.org/3.9/library/typing.html?highlight=optional#typing.Optional)[[`bool`]( https://docs.python.org/3.9/library/stdtypes.html?highlight=int#boolean-values)] <s generated />
+#### check_height [`bool`]( https://docs.python.org/3.9/library/stdtypes.html?highlight=int#boolean-values) <s generated />
 
 <hr class="solid" />  <s generated />
