--- a/docs/docs/api/client/python/classes/player.mdx
+++ b/docs/docs/api/client/python/classes/player.mdx
@@ -24,7 +24,7 @@ toc_max_heading_level: 4
 
 - other_locator `Locator` <s generated />
 
-- epsilon [`Optional`]( https://docs.python.org/3.9/library/typing.html?highlight=optional#typing.Optional)[[`int`]( https://docs.python.org/3.9/library/stdtypes.html?highlight=int#numeric-types-int-float-complex)] <s generated />
+- epsilon [`int`]( https://docs.python.org/3.9/library/stdtypes.html?highlight=int#numeric-types-int-float-complex) <s generated />
 
 <hr class="solid" />  <s generated />
 
@@ -38,7 +38,7 @@ toc_max_heading_level: 4
 
 - dest [`Union`]( https://docs.python.org/3.9/library/typing.html?highlight=optional#typing.Union)[[`Vector3`]( vector3), `Locator`] <s generated />
 
-- options [`Optional`]( https://docs.python.org/3.9/library/typing.html?highlight=optional#typing.Optional)[[`MovePlayerOptions`]( move-player-options)] <s generated />
+- options [`MovePlayerOptions`]( move-player-options) <s generated />
 
 ##### Return <s generated />
 
