--- a/docs/docs/api/client/python/classes/query-object-interactable-options.mdx
+++ b/docs/docs/api/client/python/classes/query-object-interactable-options.mdx
@@ -9,10 +9,10 @@ toc_max_heading_level: 4
 
 ## Properties <s generated />
 
-#### check_moving [`Optional`]( https://docs.python.org/3.9/library/typing.html?highlight=optional#typing.Optional)[[`bool`]( https://docs.python.org/3.9/library/stdtypes.html?highlight=int#boolean-values)] <s generated />
+#### check_moving [`bool`]( https://docs.python.org/3.9/library/stdtypes.html?highlight=int#boolean-values) <s generated />
 
 <hr class="solid" />  <s generated />
 
-#### check_raycast [`Optional`]( https://docs.python.org/3.9/library/typing.html?highlight=optional#typing.Optional)[[`bool`]( https://docs.python.org/3.9/library/stdtypes.html?highlight=int#boolean-values)] <s generated />
+#### check_raycast [`bool`]( https://docs.python.org/3.9/library/stdtypes.html?highlight=int#boolean-values) <s generated />
 
 <hr class="solid" />  <s generated />
