--- a/docs/docs/api/client/python/classes/ui-element.mdx
+++ b/docs/docs/api/client/python/classes/ui-element.mdx
@@ -22,7 +22,7 @@ toc_max_heading_level: 4
 
 ##### Arguments <s generated />
 
-- options [`Optional`]( https://docs.python.org/3.9/library/typing.html?highlight=optional#typing.Optional)[[`ActionClickOptions`]( action-click-options)] <s generated />
+- options [`ActionClickOptions`]( action-click-options) <s generated />
 
 ##### Return <s generated />
 
@@ -38,7 +38,7 @@ toc_max_heading_level: 4
 
 - to [`Union`]( https://docs.python.org/3.9/library/typing.html?highlight=optional#typing.Union)[[`UIElement`]( ui-element), [`Vector2`]( vector2)] <s generated />
 
-- options [`Optional`]( https://docs.python.org/3.9/library/typing.html?highlight=optional#typing.Optional)[[`ActionDragOptions`]( action-drag-options)] <s generated />
+- options [`ActionDragOptions`]( action-drag-options) <s generated />
 
 ##### Return <s generated />
 
@@ -62,7 +62,7 @@ toc_max_heading_level: 4
 
 ##### Arguments <s generated />
 
-- options [`Optional`]( https://docs.python.org/3.9/library/typing.html?highlight=optional#typing.Optional)[[`QueryObjectInteractableOptions`]( query-object-interactable-options)] <s generated />
+- options [`QueryObjectInteractableOptions`]( query-object-interactable-options) <s generated />
 
 ##### Return <s generated />
 
@@ -84,7 +84,7 @@ toc_max_heading_level: 4
 
 - delta [`Vector2`]( vector2) <s generated />
 
-- options [`Optional`]( https://docs.python.org/3.9/library/typing.html?highlight=optional#typing.Optional)[[`ActionScrollOptions`]( action-scroll-options)] <s generated />
+- options [`ActionScrollOptions`]( action-scroll-options) <s generated />
 
 <hr class="solid" />  <s generated />
 
@@ -96,7 +96,7 @@ toc_max_heading_level: 4
 
 - text [`str`]( https://docs.python.org/3.9/library/stdtypes.html?highlight=int#numeric-types-int-float-complex) <s generated />
 
-- options [`Optional`]( https://docs.python.org/3.9/library/typing.html?highlight=optional#typing.Optional)[[`SetTextOptions`]( set-text-options)] <s generated />
+- options [`SetTextOptions`]( set-text-options) <s generated />
 
 <hr class="solid" />  <s generated />
 
@@ -106,7 +106,7 @@ toc_max_heading_level: 4
 
 ##### Arguments <s generated />
 
-- options [`Optional`]( https://docs.python.org/3.9/library/typing.html?highlight=optional#typing.Optional)[[`QueryObjectInteractableOptions`]( query-object-interactable-options)] <s generated />
+- options [`QueryObjectInteractableOptions`]( query-object-interactable-options) <s generated />
 
 ##### Return <s generated />
 
@@ -120,11 +120,11 @@ toc_max_heading_level: 4
 
 ##### Arguments <s generated />
 
-- options [`Optional`]( https://docs.python.org/3.9/library/typing.html?highlight=optional#typing.Optional)[[`QueryObjectInteractableOptions`]( query-object-interactable-options)] <s generated />
+- options [`QueryObjectInteractableOptions`]( query-object-interactable-options) <s generated />
 
 ##### Return <s generated />
 
-- `TryResult`[[`bool`]( https://docs.python.org/3.9/library/stdtypes.html?highlight=int#boolean-values)] <s generated />
+- `TryResult`[[`None`]( https://docs.python.org/3.9/library/constants.html?highlight=none#None)] <s generated />
 
 <hr class="solid" />  <s generated />
 
@@ -134,10 +134,10 @@ toc_max_heading_level: 4
 
 ##### Arguments <s generated />
 
-- options [`Optional`]( https://docs.python.org/3.9/library/typing.html?highlight=optional#typing.Optional)[[`QueryObjectInteractableOptions`]( query-object-interactable-options)] <s generated />
+- options [`QueryObjectInteractableOptions`]( query-object-interactable-options) <s generated />
 
 ##### Return <s generated />
 
-- [`bool`]( https://docs.python.org/3.9/library/stdtypes.html?highlight=int#boolean-values) <s generated />
+- [`None`]( https://docs.python.org/3.9/library/constants.html?highlight=none#None) <s generated />
 
 <hr class="solid" />  <s generated />
