--- a/docs/docs/api/client/python/classes/ui.mdx
+++ b/docs/docs/api/client/python/classes/ui.mdx
@@ -18,9 +18,9 @@ toc_max_heading_level: 4
 
 - locator `Locator` <s generated />
 
-- find_options [`Optional`]( https://docs.python.org/3.9/library/typing.html?highlight=optional#typing.Optional)[[`FindObjectOptions`]( find-object-options)] <s generated />
+- find_options [`FindObjectOptions`]( find-object-options) <s generated />
 
-- click_options [`Optional`]( https://docs.python.org/3.9/library/typing.html?highlight=optional#typing.Optional)[[`ActionClickOptions`]( action-click-options)] <s generated />
+- click_options [`ActionClickOptions`]( action-click-options) <s generated />
 
 <hr class="solid" />  <s generated />
 
@@ -34,9 +34,9 @@ toc_max_heading_level: 4
 
 - to [`Union`]( https://docs.python.org/3.9/library/typing.html?highlight=optional#typing.Union)[`Locator`, [`Vector2`]( vector2)] <s generated />
 
-- find_options [`Optional`]( https://docs.python.org/3.9/library/typing.html?highlight=optional#typing.Optional)[[`FindObjectOptions`]( find-object-options)] <s generated />
+- find_options [`FindObjectOptions`]( find-object-options) <s generated />
 
-- drag_options [`Optional`]( https://docs.python.org/3.9/library/typing.html?highlight=optional#typing.Optional)[[`ActionDragOptions`]( action-drag-options)] <s generated />
+- drag_options [`ActionDragOptions`]( action-drag-options) <s generated />
 
 <hr class="solid" />  <s generated />
 
@@ -80,7 +80,7 @@ toc_max_heading_level: 4
 
 - locator `Locator` <s generated />
 
-- find_options [`Optional`]( https://docs.python.org/3.9/library/typing.html?highlight=optional#typing.Optional)[[`FindObjectOptions`]( find-object-options)] <s generated />
+- find_options [`FindObjectOptions`]( find-object-options) <s generated />
 
 <hr class="solid" />  <s generated />
 
@@ -94,9 +94,9 @@ toc_max_heading_level: 4
 
 - delta [`Vector2`]( vector2) <s generated />
 
-- find_options [`Optional`]( https://docs.python.org/3.9/library/typing.html?highlight=optional#typing.Optional)[[`FindObjectOptions`]( find-object-options)] <s generated />
+- find_options [`FindObjectOptions`]( find-object-options) <s generated />
 
-- scroll_options [`Optional`]( https://docs.python.org/3.9/library/typing.html?highlight=optional#typing.Optional)[[`ActionScrollOptions`]( action-scroll-options)] <s generated />
+- scroll_options [`ActionScrollOptions`]( action-scroll-options) <s generated />
 
 <hr class="solid" />  <s generated />
 
@@ -110,7 +110,7 @@ toc_max_heading_level: 4
 
 - text [`str`]( https://docs.python.org/3.9/library/stdtypes.html?highlight=int#numeric-types-int-float-complex) <s generated />
 
-- find_options [`Optional`]( https://docs.python.org/3.9/library/typing.html?highlight=optional#typing.Optional)[[`FindObjectOptions`]( find-object-options)] <s generated />
+- find_options [`FindObjectOptions`]( find-object-options) <s generated />
 
 <hr class="solid" />  <s generated />
 
