--- a/docs/docs/api/client/python/classes/until.mdx
+++ b/docs/docs/api/client/python/classes/until.mdx
@@ -18,7 +18,7 @@ toc_max_heading_level: 4
 
 - param [`T`]( https://docs.python.org/3.9/library/typing.html?highlight=optional#typing.TypeVar) <s generated />
 
-- options [`Optional`]( https://docs.python.org/3.9/library/typing.html?highlight=optional#typing.Optional)[[`QueryObjectInteractableOptions`]( query-object-interactable-options)] <s generated />
+- options [`QueryObjectInteractableOptions`]( query-object-interactable-options) <s generated />
 
 ##### Return <s generated />
 
@@ -34,7 +34,7 @@ toc_max_heading_level: 4
 
 - locator `Locator` <s generated />
 
-- options [`Optional`]( https://docs.python.org/3.9/library/typing.html?highlight=optional#typing.Optional)[[`FindObjectOptions`]( find-object-options)] <s generated />
+- options [`FindObjectOptions`]( find-object-options) <s generated />
 
 ##### Return <s generated />
 
@@ -50,7 +50,7 @@ toc_max_heading_level: 4
 
 - locator `Locator` <s generated />
 
-- options [`Optional`]( https://docs.python.org/3.9/library/typing.html?highlight=optional#typing.Optional)[[`FindObjectOptions`]( find-object-options)] <s generated />
+- options [`FindObjectOptions`]( find-object-options) <s generated />
 
 ##### Return <s generated />
 
