--- a/docs/docs/api/client/python/classes/rpc-by.mdx
+++ b/docs/docs/api/client/python/classes/rpc-by.mdx
@@ -22,7 +22,7 @@ toc_max_heading_level: 4
 
 <hr class="solid" />  <s generated />
 
-#### params [`Tuple`]( https://docs.python.org/3.9/library/stdtypes.html?highlight=int#sequence-types-list-tuple-range)[[`Any`]( https://docs.python.org/3.9/library/typing.html?highlight=any#typing.Any)] <s generated />
+#### params [`Tuple`]( https://docs.python.org/3.9/library/stdtypes.html?highlight=int#sequence-types-list-tuple-range)[[`Any`]( https://docs.python.org/3.9/library/typing.html?highlight=any#typing.Any), ...] <s generated />
 
 <hr class="solid" />  <s generated />
 
