--- a/docs/docs/api/client/python/classes/send-key-options.mdx
+++ b/docs/docs/api/client/python/classes/send-key-options.mdx
@@ -9,6 +9,6 @@ toc_max_heading_level: 4
 
 ## Properties <s generated />
 
-#### duration_ms [`Optional`]( https://docs.python.org/3.9/library/typing.html?highlight=optional#typing.Optional)[[`int`]( https://docs.python.org/3.9/library/stdtypes.html?highlight=int#numeric-types-int-float-complex)] <s generated />
+#### duration_ms [`int`]( https://docs.python.org/3.9/library/stdtypes.html?highlight=int#numeric-types-int-float-complex) <s generated />
 
 <hr class="solid" />  <s generated />
