--- a/docs/docs/api/client/python/classes/vector2.mdx
+++ b/docs/docs/api/client/python/classes/vector2.mdx
@@ -19,6 +19,20 @@ toc_max_heading_level: 4
 
 ## Methods <s generated />
 
+### from_vector3 <s generated />
+
+<s childtag /> <code style={{ position:'relative', top:'-20px', fontSize:'70%'}} children='public'/> <code style={{ position:'relative', top:'-20px', fontSize:'70%'}} children='static'/> <s generated />
+
+##### Arguments <s generated />
+
+- vector3 [`Vector3`]( vector3) <s generated />
+
+##### Return <s generated />
+
+- [`Vector2`]( vector2) <s generated />
+
+<hr class="solid" />  <s generated />
+
 ### zero <s generated />
 
 <s childtag /> <code style={{ position:'relative', top:'-20px', fontSize:'70%'}} children='public'/> <code style={{ position:'relative', top:'-20px', fontSize:'70%'}} children='static'/> <s generated />
